Drop deprecated code in LanguageRegistry
and remove unused rt flags.
InterpretedLanguageRuntime are history, finally.